erDiagram
    USERS {
        UUID id PK
        VARCHAR email UK
        VARCHAR name
        VARCHAR password_hash
        VARCHAR role
        VARCHAR status
        UUID partner_id FK
        VARCHAR avatar_url
        JSON profile_photo
        TEXT bio
        VARCHAR phone
        TEXT address
        DATETIME terms_accepted_at
        DATETIME last_login_at
        DATETIME created_at
        DATETIME updated_at
    }

    PARTNERS {
        UUID id PK
        VARCHAR name
        TEXT description
        VARCHAR logo_url
        VARCHAR email UK
        VARCHAR phone
        TEXT address
        VARCHAR website
        TEXT service_types
        VARCHAR contact_person
        VARCHAR status
        BOOLEAN verified
        DECIMAL rating
        DATETIME created_at
        DATETIME updated_at
    }

    USER_PREFERENCES {
        UUID id PK
        UUID user_id FK
        BOOLEAN email_notifications
        BOOLEAN push_notifications
        BOOLEAN sms_notifications
        BOOLEAN newsletter
        DATETIME updated_at
    }

    SUBMISSIONS {
        UUID id PK
        UUID user_id FK
        VARCHAR item_type
        VARCHAR condition
        VARCHAR fabric
        VARCHAR cleanliness
        TEXT description
        JSON photos
        VARCHAR status
        UUID assigned_partner_id FK
        VARCHAR submission_code UK
        VARCHAR service_type
        INTEGER quantity
        BOOLEAN buyback_interest
        VARCHAR action
        DATETIME scheduled_at
        DATETIME created_at
        DATETIME updated_at
    }

    SUBMISSION_DETAILS {
        UUID id PK
        UUID submission_id FK
        TEXT item_types
        TEXT other_item_type
        TEXT condition
        TEXT cleanliness
        BOOLEAN knows_fabric_type
        TEXT fabric_types
        TEXT fabric_identification
        TEXT brand
        BOOLEAN no_brand_visible
        TEXT fabric_description
        DATETIME created_at
        DATETIME updated_at
    }

    BURN_TESTS {
        UUID id PK
        UUID submission_id FK
        BOOLEAN performed
        INTEGER page
        TEXT moment
        TEXT flames
        TEXT no_flame
        TEXT smell
        TEXT ashes
        DATETIME created_at
        DATETIME updated_at
    }

    SUBMISSION_IMAGES {
        UUID id PK
        UUID submission_id FK
        TEXT url
        TEXT storage_key
        JSON metadata
        DATETIME uploaded_at
    }

    TRANSACTIONS {
        UUID id PK
        UUID submission_id FK
        UUID from_user_id FK
        UUID to_partner_id FK
        VARCHAR type
        TEXT notes
        DATETIME created_at
        DATETIME updated_at
    }

    RECOMMENDATION_RUNS {
        UUID id PK
        UUID submission_id FK
        UUID requested_by_user_id FK
        VARCHAR engine_name
        VARCHAR engine_version
        VARCHAR status
        JSON criteria
        JSON input_snapshot
        DATETIME started_at
        DATETIME completed_at
        TEXT error_message
        DATETIME created_at
    }

    RECOMMENDATION_RESULTS {
        UUID id PK
        UUID run_id FK
        UUID submission_id FK
        UUID partner_id FK
        VARCHAR recommended_pathway
        INTEGER rank
        DECIMAL score
        DECIMAL confidence
        TEXT explanation
        TEXT details
        JSON output_payload
        BOOLEAN selected
        DATETIME generated_at
    }

    RECOMMENDATION_FEEDBACK {
        UUID id PK
        UUID recommendation_result_id FK
        UUID user_id FK
        INTEGER rating
        BOOLEAN accepted
        TEXT feedback
        DATETIME created_at
    }

    NOTIFICATIONS {
        UUID id PK
        UUID user_id FK
        VARCHAR type
        VARCHAR title
        TEXT message
        UUID related_id
        BOOLEAN read
        DATETIME created_at
    }

    ACTIVITY_LOGS {
        UUID id PK
        UUID user_id FK
        VARCHAR action
        VARCHAR entity_type
        UUID entity_id
        JSON details
        DATETIME created_at
    }

    CONVERSATIONS {
        UUID id PK
        UUID user_id FK
        UUID partner_id FK
        VARCHAR conversation_type
        TEXT subject
        VARCHAR status
        UUID related_submission_id FK
        DATETIME created_at
        DATETIME updated_at
    }

    MESSAGES {
        UUID id PK
        UUID from_user_id FK
        UUID to_user_id FK
        UUID conversation_id FK
        VARCHAR sender_type
        TEXT content
        BOOLEAN read
        DATETIME created_at
    }

    MESSAGE_ATTACHMENTS {
        UUID id PK
        UUID message_id FK
        TEXT filename
        TEXT url
        JSON metadata
        DATETIME uploaded_at
    }

    PARTNERS ||--o{ USERS : owns_partner_users
    USERS ||--o{ USER_PREFERENCES : controls
    USERS ||--o{ SUBMISSIONS : creates
    PARTNERS ||--o{ SUBMISSIONS : assigned_to
    SUBMISSIONS ||--|| SUBMISSION_DETAILS : has
    SUBMISSIONS ||--o{ BURN_TESTS : has
    SUBMISSIONS ||--o{ SUBMISSION_IMAGES : has
    SUBMISSIONS ||--o{ TRANSACTIONS : has
    USERS ||--o{ TRANSACTIONS : starts
    PARTNERS ||--o{ TRANSACTIONS : receives
    SUBMISSIONS ||--o{ RECOMMENDATION_RUNS : evaluated_by
    USERS ||--o{ RECOMMENDATION_RUNS : requests
    RECOMMENDATION_RUNS ||--o{ RECOMMENDATION_RESULTS : produces
    SUBMISSIONS ||--o{ RECOMMENDATION_RESULTS : receives
    PARTNERS ||--o{ RECOMMENDATION_RESULTS : ranked_in
    RECOMMENDATION_RESULTS ||--o{ RECOMMENDATION_FEEDBACK : receives
    USERS ||--o{ RECOMMENDATION_FEEDBACK : gives
    USERS ||--o{ NOTIFICATIONS : receives
    USERS ||--o{ ACTIVITY_LOGS : records
    USERS ||--o{ CONVERSATIONS : participates
    PARTNERS ||--o{ CONVERSATIONS : participates
    SUBMISSIONS ||--o{ CONVERSATIONS : relates_to
    USERS ||--o{ MESSAGES : sends
    USERS ||--o{ MESSAGES : receives
    CONVERSATIONS ||--o{ MESSAGES : contains
    MESSAGES ||--o{ MESSAGE_ATTACHMENTS : includes
